🎨 Fix text contrast and implement white logo
✨ Features:
- Switch to white Business Evolution AI logo for better visibility
- Implement comprehensive dark theme with improved text contrast
- Add glassmorphism effects with backdrop blur and translucent backgrounds
- Update all form elements with proper dark theme styling

🔧 Improvements:
- Better readability with white text on dark backgrounds
- Consistent spacing and modern UI elements
- Improved accessibility with higher contrast ratios
- Professional dark theme suitable for dashboard environment

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
     <header class="dashboard-header">
         <div class="header-content">
             <div class="logo-section">
-                <img src="images/logo.png" alt="Business Evolution AI" class="header-logo">
+                <img src="images/logo-white.png" alt="Business Evolution AI" class="header-logo">
                 <h1 class="dashboard-title">Email Management Hub</h1>
             </div>
             <div class="header-stats">
